# newsletter-rs

./: .env  Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: general.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  subscribe.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscribe.rs  subscriptions.rs
tests/: health_check.rs
